new creation framework lite with jdk 17