@@ -4,42 +4,41 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ch.qa.testautomation</groupId>
     <artifactId>framework</artifactId>
-    <version>3.0.4-qa-RELEASE</version>
-    <name>testautomation-framework</name>
+    <version>4.0.01-RELEASE</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>17</java.version>
         <maven.compiler.version>3.8.1</maven.compiler.version>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source >
+        <maven.compiler.target>17</maven.compiler.target>
         <maven.plugin.jar.version>3.2.2</maven.plugin.jar.version>
-        <maven.plugin.assembly.version>3.3.0</maven.plugin.assembly.version>
         <maven.plugin.source.version>3.2.1</maven.plugin.source.version>
         <maven.plugin.resource.version>3.2.0</maven.plugin.resource.version>
-        <maven.surefire.version>3.0.0-M5</maven.surefire.version>
-        <allure.version>2.17.3</allure.version>
-        <aspectj.version>1.9.8</aspectj.version>
+        <maven.surefire.version>3.0.0-M7</maven.surefire.version>
+        <allure.version>2.20.0</allure.version>
+        <aspectj.version>1.9.9.1</aspectj.version>
         <commons-exec.version>1.3</commons-exec.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
-        <junit.version>5.8.2</junit.version>
-        <junit-platform.version>1.8.2</junit-platform.version>
-        <jsoup.version>1.14.3</jsoup.version>
-        <jersey.version>3.0.4</jersey.version>
+        <junit.version>5.9.0</junit.version>
+        <junit-platform.version>1.9.0</junit-platform.version>
+        <jsoup.version>1.15.3</jsoup.version>
+        <jersey.version>3.1.0</jersey.version>
         <jdom2.version>2.0.6.1</jdom2.version>
         <jcoded.version>0.2.5</jcoded.version>
-        <jackson.version>2.13.2</jackson.version>
+        <jackson.version>2.14.0</jackson.version>
         <jakarta.version>2.1.0</jakarta.version>
-        <jira.client.version>0.5</jira.client.version>
-        <log4j.version>2.17.1</log4j.version>
-        <ms.sqlserver.version>10.2.0.jre8</ms.sqlserver.version>
-        <net.bytebuddy.version>1.12.9</net.bytebuddy.version>
-        <oracle.jdbc.version>21.5.0.0</oracle.jdbc.version>
-        <poi.version>5.2.0</poi.version>
+        <log4j.version>2.19.0</log4j.version>
+        <ms.sqlserver.version>11.2.1.jre11</ms.sqlserver.version>
+        <oracle.jdbc.version>21.7.0.0</oracle.jdbc.version>
+        <poi.version>5.2.2</poi.version>
         <reflection.version>0.10.2</reflection.version>
-        <selenide.version>6.6.3</selenide.version>
-        <slf4j.version>1.7.36</slf4j.version>
-        <tess4j.version>5.1.1</tess4j.version>
-        <zxing.version>3.4.1</zxing.version>
+        <selenide.version>6.10.1</selenide.version>
+        <slf4j.version>2.0.5</slf4j.version>
+        <tess4j.version>5.4.0</tess4j.version>
+        <zxing.version>3.5.1</zxing.version>
+        <hamcrest.version>2.2</hamcrest.version>
     </properties>
 
     <dependencyManagement>
@@ -55,38 +54,20 @@
     </dependencyManagement>
 
     <dependencies>
-        <!--Temporal Dependencies for screen recorder-->
         <dependency>
-            <groupId>com.github.stephenc.monte</groupId>
-            <artifactId>monte-screen-recorder</artifactId>
-            <version>0.7.7.0</version>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc11</artifactId>
+            <version>${oracle.jdbc.version}</version>
         </dependency>
         <dependency>
-            <groupId>ws.schild</groupId>
-            <artifactId>jave-core</artifactId>
-            <version>3.2.0</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-api</artifactId>
-                </exclusion>
-            </exclusions>
+            <groupId>com.codeborne</groupId>
+            <artifactId>selenide</artifactId>
+            <version>${selenide.version}</version>
         </dependency>
         <dependency>
-            <groupId>ws.schild</groupId>
-            <artifactId>jave-native-win64</artifactId>
-            <version>2.4.6</version>
-        </dependency>
-        <!--End Temporal Dependencies for screen recorder-->
-        <dependency>
-            <groupId>net.bytebuddy</groupId>
-            <artifactId>byte-buddy</artifactId>
-            <version>${net.bytebuddy.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>${hamcrest.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -97,21 +78,6 @@
             <groupId>jakarta.activation</groupId>
             <artifactId>jakarta.activation-api</artifactId>
             <version>${jakarta.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.codeborne</groupId>
-            <artifactId>selenide</artifactId>
-            <version>${selenide.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.google.code.gson</groupId>
-                    <artifactId>gson</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-api</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.jcodec</groupId>
@@ -144,7 +110,7 @@
             <artifactId>reflections</artifactId>
             <version>${reflection.version}</version>
             <exclusions>
-                <exclusion>
+                <exclusion>  <!-- declare the exclusion here -->
                     <groupId>com.google.guava</groupId>
                     <artifactId>guava</artifactId>
                 </exclusion>
@@ -156,7 +122,7 @@
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
-            <artifactId>jersey-server</artifactId>
+            <artifactId>jersey-client</artifactId>
             <version>${jersey.version}</version>
         </dependency>
         <dependency>
@@ -165,19 +131,14 @@
             <version>${jersey.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-suite-api</artifactId>
-            <version>${junit-platform.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-runner</artifactId>
-            <version>${junit-platform.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>${junit.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <version>${junit-platform.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
@@ -187,6 +148,11 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
             <version>${log4j.version}</version>
         </dependency>
         <dependency>
@@ -208,6 +174,10 @@
                     <groupId>ch.qos.logback</groupId>
                     <artifactId>logback-classic</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
@@ -224,21 +194,13 @@
                     <groupId>org.junit.platform</groupId>
                     <artifactId>junit-platform-launcher</artifactId>
                 </exclusion>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-api</artifactId>
-                </exclusion>
             </exclusions>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>mssql-jdbc</artifactId>
             <version>${ms.sqlserver.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.oracle.database.jdbc</groupId>
-            <artifactId>ojdbc11</artifactId>
-            <version>${oracle.jdbc.version}</version>
         </dependency>
         <dependency>
             <groupId>org.aspectj</groupId>
@@ -249,21 +211,6 @@
             <groupId>com.google.zxing</groupId>
             <artifactId>javase</artifactId>
             <version>${zxing.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>net.rcarz</groupId>
-            <artifactId>jira-client</artifactId>
-            <version>${jira.client.version}</version>
-            <exclusions>
-                <exclusion>  <!-- declare the exclusion here -->
-                    <groupId>junit</groupId>
-                    <artifactId>junit</artifactId>
-                </exclusion>
-                <exclusion>  <!-- declare the exclusion here -->
-                    <groupId>org.apache.httpcomponents</groupId>
-                    <artifactId>httpclient</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
     </dependencies>
     <build>
@@ -276,7 +223,16 @@
                 <configuration>
                     <fork>true</fork>
                     <source>${maven.compiler.source}</source>
-                    <target>${maven.compiler.source}</target>
+                    <target>${maven.compiler.target}</target>
+                    <compilerArgs>
+                        <!-- Add args for JDK 17 Encapsulation-->
+                        <arg>--add-opens</arg>
+                        <arg>java.base/java.lang=ALL-UNNAMED</arg>
+                        <arg>--add-opens</arg>
+                        <arg>java.base/sun.reflect.annotation=ALL-UNNAMED</arg>
+                        <arg>--add-opens</arg>
+                        <arg>java.base/sun.nio.fs=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -286,8 +242,9 @@
                 <configuration>
                     <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
                     <testFailureIgnore>true</testFailureIgnore>
-                    <testSourceDirectory>${basedir}/src/test/java/testFramework/</testSourceDirectory>
-                    <testClassesDirectory>${project.build.directory}/test-classes/</testClassesDirectory>
+                    <includes>
+                        <include>**/ch/qa/testautomation/apollon/**/*Test.java</include>
+                    </includes>
                 </configuration>
             </plugin>
             <plugin>
@@ -328,37 +285,6 @@
                     </excludes>
                 </configuration>
             </plugin>
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-assembly-plugin</artifactId>-->
-<!--                <version>${maven.plugin.assembly.version}</version>-->
-<!--                <configuration>-->
-<!--                    <descriptorRefs>-->
-<!--                        <descriptorRef>jar-with-dependencies</descriptorRef>-->
-<!--                    </descriptorRefs>-->
-<!--                    <appendAssemblyId>false</appendAssemblyId>-->
-<!--                    <archive>-->
-<!--                        <manifest>-->
-<!--                            <mainClass>PerformableTestCases</mainClass>-->
-<!--                        </manifest>-->
-<!--                        <manifestEntries>-->
-<!--                            <Project-Version>${project.version}</Project-Version>-->
-<!--                            <Build-Date>${maven.build.timestamp}</Build-Date>-->
-<!--                            <Project-Name>${project.artifactId}_${project.version}</Project-Name>-->
-<!--                        </manifestEntries>-->
-<!--                    </archive>-->
-<!--                </configuration>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>make-assembly</id>-->
-<!--                        <phase>package</phase>-->
-<!--                        <goals>-->
-<!--                            <goal>single</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
@@ -388,4 +314,5 @@
             <url>file://${user.home}/.m2/repository</url>
         </repository>
     </distributionManagement>
+
 </project>
